# MimiClaw-ESP32S3CAM-Vision

./: .gitignore  CMakeLists.txt  ESP-IDF直接編譯燒錄mimiclaw安裝流程.md  README_CN.md  fork_from_GITHUB.md  mimiclaw在VSCODE燒錄流程.md  partitions.csv  sdkconfig.defaults  電路接線圖與安裝教程.md
components/esp_lcd_st7789/: CMakeLists.txt
components/esp_lcd_st7789/include/: esp_lcd_panel_st7789.h
components/esp_lcd_st7789/src/: esp_lcd_panel_st7789.c
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  mimi_config.h  mimi_secrets.h.example  mimi_time_service.c  mimi_time_service.h
main/agent/: agent_loop.c
main/camera/: CAMERA_SERVICE_00.C  camera_service.c  camera_service.h  tool_camera.c  tool_camera.h
main/channels/feishu/: README.md
main/cli/: serial_cli.c
main/cron/: cron_service.c
main/display/: ST7789.c  ST7789.h  display_service.c  display_service.h  ili9341.c  ili9341.h  source-han-sans16.h
main/spiffs/: check.txt  info.txt
main/tools/: gpio_policy.h  mimi_timer.h  tool_adc.c  tool_adc.h  tool_cron.c  tool_dht.c  tool_dht.h  tool_files.c  tool_files.h  tool_get_time.c  tool_get_time.h  tool_gpio.c  tool_registry.c  tool_servo.c  tool_servo.h  tool_timer.c  tool_timer.h  tool_ws2812.c  tool_ws2812.h
spiffs_data/config/: SOUL.md
spiffs_data/memory/: MEMORY.md
